logs/infinite-160825_204721.log
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "D:\Documents\ToontownSourcecode\src\toontown\toonbase\ClientStart.py", line 240, in loadScripts
    execfile('mods/'+scriptName,globals())
  File "mods/Compilation.txt", line 206, in <module>
    toonAnywhere = DirectButton(text = ("Enable Toonup anywhere", "ENABLE TOONUP ANYWHERE", "enable toonup anywhere", "enable toonup anywhere"), scale=.06, pos = (-1,-0,-.3), command=ToonupAnywhere.toonUpSetUp)
NameError: name 'ToonupAnywhere' is not defined

phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
test2
{414000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B940>, 406000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B760>, 407000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B7D8>, 416000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B990>, 409000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B918>, 401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E4B6300>, 402000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E738EE0>, 419000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B9E0>, 411000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B8C8>, 404000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B7B0>, 413000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B9B8>, 415000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B968>, 408000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B828>, 417000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B8F0>, 410000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B850>, 418000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BA30>, 403000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E4B3328>, 412000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B878>, 405000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B710>, 420000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BA08>}
__handleAvatarChooserDone: 100000013, 'Little Zippy', ('rsl', 'ls', 'l', 'm', 19, 0, 19, 19, 10, 9, 0, 9, 7, 0), 1
2
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Reading DNA file... phase_8/dna/storage_BR.pdna
Reading DNA file... phase_8/dna/storage_BR_sz.pdna
Reading DNA file... phase_8/dna/the_burrrgh_sz.pdna
empty flat building with no walls
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Reading DNA file... phase_4/dna/storage_TT.pdna
Reading DNA file... phase_4/dna/storage_TT_sz.pdna
Reading DNA file... phase_4/dna/toontown_central_sz.pdna
frame rate: 14.2 fps|0.015d|4 avs||337|341||0x1002|0x6738|417.6MB|461.6MB|16330.4MB|642|nt.2.6.2|3.300,3.300|3,6 cpus|OpenGL
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Reading DNA file... phase_6/dna/storage_MM.pdna
Reading DNA file... phase_6/dna/storage_MM_sz.pdna
Reading DNA file... phase_6/dna/minnies_melody_land_sz.pdna
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
OnscreenText.configure: mayChange == 0
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Reading DNA file... phase_8/dna/storage_DL.pdna
Reading DNA file... phase_8/dna/storage_DL_sz.pdna
Reading DNA file... phase_8/dna/donalds_dreamland_sz.pdna
frame rate: 28.1 fps|0.014d|1 avs||637|641||0x1002|0x6738|421.4MB|429.9MB|16330.4MB|693|nt.2.6.2|3.300,3.300|3,6 cpus|OpenGL
Traceback (most recent call last):
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 61, in eventLoopTask
    self.doEvents()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 55, in doEvents
    processFunc(self.eventQueue.dequeueEvent())
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 122, in processEvent
    messenger.send(eventName, paramList)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\Messenger.py", line 397, in send
    self.__dispatch(acceptorDict, event, sentArgs, foundWatch)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\Messenger.py", line 482, in __dispatch
    method (*(extraArgs + sentArgs))
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\gui\DirectButton.py", line 103, in commandFunc
    apply(self['command'], self['extraArgs'])
  File "mods/Toon Bot.txt", line 404, in loadScript
    execfile('Toon Bot/Scripts/'+script['name']+'.txt',globals())
  File "Toon Bot/Scripts/VP Maxer.txt", line 1
    <!DOCTYPE html><html lang="en" xmlns:fb="http://ogp.me/ns/fb#" xml:lang="en" class="" xmlns="http://www.w3.org/1999/xhtml">
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "otp\otpbase\OTPBase.py", line 236, in run
    taskMgr.run()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\task\Task.py", line 502, in run
    self.step()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\task\Task.py", line 460, in step
    self.mgr.poll()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 61, in eventLoopTask
    self.doEvents()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 55, in doEvents
    processFunc(self.eventQueue.dequeueEvent())
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 122, in processEvent
    messenger.send(eventName, paramList)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\Messenger.py", line 397, in send
    self.__dispatch(acceptorDict, event, sentArgs, foundWatch)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\Messenger.py", line 482, in __dispatch
    method (*(extraArgs + sentArgs))
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\gui\DirectButton.py", line 103, in commandFunc
    apply(self['command'], self['extraArgs'])
  File "mods/Toon Bot.txt", line 404, in loadScript
    execfile('Toon Bot/Scripts/'+script['name']+'.txt',globals())
  File "Toon Bot/Scripts/VP Maxer.txt", line 1
    <!DOCTYPE html><html lang="en" xmlns:fb="http://ogp.me/ns/fb#" xml:lang="en" class="" xmlns="http://www.w3.org/1999/xhtml">
    ^
SyntaxError: invalid syntax
